--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,22 @@
     @apply bg-background text-foreground;
   }
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  }
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+  }
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #999;
+  border-radius: 4px;
+  }
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #666;
+  }
+      
