--- a/app/globals.css
+++ b/app/globals.css
@@ -84,7 +84,7 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
   }
 
 .custom-scrollbar::-webkit-scrollbar-track {
@@ -93,11 +93,11 @@
   }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background: #999;
+   background: hsl(221.2, 83.2%, 53.3%, 0.7);
   border-radius: 4px;
   }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #666;
+  background: hsl(217.2, 91.2%, 59.8%, 1);
   }
       
